syntax = "proto3";

import "google/protobuf/empty.proto";

import "checkout/purchases.proto";

option go_package = "./pbcheckout";

package checkout;

service Cards {
  rpc CreateCard(purchases.CreateCardRequest) returns (purchases.CreateCardResponse){}
  rpc VerifyCVV(purchases.VerifyCVVRequest) returns (google.protobuf.Empty){}
  rpc RetrieveMyCards(purchases.RetrieveMyCardsRequest) returns (purchases.RetrieveMyCardsResponse){}
}

// service Reservations {
//   rpc CreateReservation (CreateReservationRequest) returns (CreateReservationResponse){}

//   rpc Retrieve (RetrieveOrderRequest) returns (Reservation){}

//   rpc RetrieveCurrent (RetrieveCurrentRequest) returns (RetrieveReservationResponse){}
//   rpc StateMachine (google.protobuf.Empty) returns (StateMachineResponse){}

//   rpc Prev(UpdateStateRequest) returns (RetrieveReservationResponse){}
//   rpc Next(UpdateStateRequest) returns (RetrieveReservationResponse){}

//   rpc Cancel(UpdateStateRequest) returns (RetrieveReservationResponse){}
// }

// service Bookings {
//   rpc CreateBooking (CreateBookingRequest) returns (CreateBookingResponse){}

//   rpc Retrieve (RetrieveOrderRequest) returns (Booking){}

//   rpc RetrieveCurrent (RetrieveCurrentRequest) returns (RetrieveBookingResponse){}
//   rpc StateMachine (google.protobuf.Empty) returns (StateMachineResponse){}

//   rpc Prev(UpdateStateRequest) returns (RetrieveBookingResponse){}
//   rpc Next(UpdateStateRequest) returns (RetrieveBookingResponse){}

//   rpc Cancel(UpdateStateRequest) returns (RetrieveBookingResponse){}
// }

// service Payments {
//   rpc CreatePayment(CreatePaymentRequest) returns(CreatePaymentResponse){}
//   rpc Retrieve (RetrievePaymentRequest) returns (Payment){}

//   rpc RetrieveStateChanges(RetrieveStateChangesRequest) returns (RetrieveStateChangesResponse){}
// }
// service Shippings {
//   rpc AgreeShippingDispatch(AgreeShippingDispatchRequest) returns (google.protobuf.Empty){}

//   rpc RetrieveStateChanges(RetrieveStateChangesRequest) returns (RetrieveStateChangesResponse){}

//   rpc CreateShipping(CreateShippingRequest) returns (CreateShippingResponse){}
//   rpc Retrieve (RetrieveShippingRequest) returns (Shipping){}

//   rpc Prev(UpdateStateRequest) returns (RetrieveShippingResponse){}
//   rpc Next(UpdateStateRequest) returns (RetrieveShippingResponse){}
//   rpc Cancel(UpdateStateRequest) returns (RetrieveShippingResponse){}
// }

// service Purchases {
//   rpc CreatePurchase (CreatePurchaseRequest) returns (CreatePurchaseResponse){}

//   rpc AssignDestAddress(AssignDestAddressRequest) returns (google.protobuf.Empty){}

//   rpc Retrieve (RetrieveOrderRequest) returns (Purchase){}

//   rpc RetrieveShippingMethods(RetrieveShippingMethodsRequest) returns (RetrieveShippingMethodsResponse) {}

//   rpc ConfirmPurchase(ConfirmPurchaseRequest) returns(Purchase){}

//   rpc RetrieveCurrent (RetrieveCurrentRequest) returns (RetrievePurchaseResponse){}
//   rpc StateMachine (google.protobuf.Empty) returns (StateMachineResponse){}

//   rpc RetrieveStateChanges(RetrieveStateChangesRequest) returns (RetrieveStateChangesResponse){}

//   rpc AgreeFinishOrder (AgreeFinishOrderRequest) returns (google.protobuf.Empty){}

//   rpc Prev(UpdateStateRequest) returns (RetrievePurchaseResponse){}
//   rpc Next(UpdateStateRequest) returns (RetrievePurchaseResponse){}

//   rpc Cancel(UpdateStateRequest) returns (RetrievePurchaseResponse){}
// }


